# sqlite2duckdb

./: LICENSE  Makefile  README.md  pyproject.toml
sqlite2duckdb/: __init__.py  __main__.py  sqlite_to_duckdb.py
tests/: test_convert.py  utils.py
