[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sqlite2duckdb"
version = "0.1.0"
authors = [{name="Sacha Schutz", email="sacha.schutz@pm.me"}]
description = "A tool to convert sqlite database to duckdb database"
readme = "README.md"
requres-python = ">=3.8"
keywords = ["sqlite", "duckdb", "database", "olap", "oltp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/dridk/sqlite2duckdb"
Issues = "https://github.com/dridk/sqlite2duckdb/issues"

[project.scripts]
sqlite2duckdb = "sqlite2duckdb.__main__:main_cli"
